# deeprte

./: .devcontainer.json  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .pylintrc  Dockerfile  README.md  README.tex.md  README.tex.md.temp  build_tfds_dataset.sh  convert_dataset.sh  data_postprocess.py  download_datasets.sh  eval_bc.py  generate_gaussian_random_field.m  generate_param_only_checkpoint.py  pipeline_callback.py  plot_gaussian_random_field.m  pyproject.toml  pyrightconfig.json  remote_list.txt  requirements.txt  run.py  run.sh  run_deeprte.py  run_eval.sh  run_main.py  run_predict.py  run_train.py  run_train.sh  setup.cfg  setup.py  start.sh  train.py  train_deeprte.py
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  jaxline.patch  requirements-dev.txt  requirements.txt  tensorboard.patch  train_patched.py  utils.py
.github/workflows/: action.yml  build-docker.yaml  devcontainer-build-and-push.yml  runtime-container-build-and-push.yaml
.trunk/: trunk.yaml
archieve/: lte.py  micro_macro.py  run_predict.py  setup.py
archieve/unsupervised/: input_pipeline.py  predict.py  train.py
ckpts/infer/g0.1-infer/: config.yaml
ckpts/infer/g0.5-infer/: config.yaml
ckpts/infer/g0.8-infer/: config.yaml
ckpts/train/g0.1/: config.yaml  events.out.tfevents.1723388841.f1be4151242f.363463.0.v2  events.out.tfevents.1723392146.f1be4151242f.374376.0.v2  events.out.tfevents.1723531671.f1be4151242f.594124.0.v2  events.out.tfevents.1723531804.f1be4151242f.595865.0.v2  events.out.tfevents.1723532263.f1be4151242f.598263.0.v2  events.out.tfevents.1723537900.f1be4151242f.617027.0.v2  events.out.tfevents.1723537946.f1be4151242f.618397.0.v2  events.out.tfevents.1723539749.f1be4151242f.625595.0.v2  events.out.tfevents.1723561015.f1be4151242f.671807.0.v2  events.out.tfevents.1723868550.b93fae8c6740.92958.0.v2
ckpts/train/g0.5/: config.yaml  events.out.tfevents.1723565697.f1be4151242f.693893.0.v2  events.out.tfevents.1723705822.ad511b98f40e.3208.0.v2  temp.yaml
ckpts/train/g0.8/: config.yaml  events.out.tfevents.1723097797.143a86f2516c.45719.0.v2  events.out.tfevents.1723098560.143a86f2516c.48848.0.v2  events.out.tfevents.1723102264.143a86f2516c.66345.0.v2  (+4 more)
configs/: L.yaml  S.yaml  g0.1.yaml  g0.5.yaml  g0.8.yaml  no-scattering.yaml
deeponet/: common_modules.py  config.yaml  evaluate.py  modules.py  train.py
deeponet/conf/: config.yaml
deeponet/config/: J.yaml  L.yaml  config.yaml
deeponet/modulus/: mio.py  modules.py
deeponet/utils/: __init__.py  checkpoint.py  distributed.py  helper.py  key.py  log.py  metrics.py  summary.py
deeprte/: base_model.py  checkpoint.py  config.py  config_old.py  data_adapter.py  data_convert.py  dataset.py  experiment.py  experiment_old.py  generator.py  input_pipeline.py  integrate.py  main.py  mapping.py  modules.py  networks.py  optimizers.py  plot.py  solution.py  solver.py  train.py  typing.py  utils.py
deeprte/configs/: default.py  g0.1.yaml  g0.5.yaml
deeprte/data/: pipeline.py  raw_data.py  utils.py
deeprte/input_pipeline/: _grain_data_processing.py  _tfds_data_processing.py  input_pipeline_interface.py  utils.py
deeprte/jaxline/: base_config.py  conftest.py  experiment.py  platform.py  train.py  train_test.py  utils.py  utils_test.py
deeprte/legacy/: checkpoint.py  experiment.py
deeprte/model/: autoencoder.py  base.py  characteristics.py  config.py  data.py  deeprte.py  engine.py  features.py  infer.py  integrate.py  layer_stack.py  lte.py  mapping.py  mapping_v2.py  micro_macro.py  model.py  modules.py  modules_v2.py  nets.py  networks.py  phase_space.py  predicter.py  prng.py  rte.py  utils.py
deeprte/models/: base_model.py  linear_transport.py  micro_macro.py  rte.py  rte_op.py
deeprte/modules/: green_fn.py  nets.py
deeprte/train_lib/: checkpointing.py  generate_param_only_checkpoint.py  main.py  multihost_dataloading.py  optimizers.py  train.py  utils.py
deeprte/unsupervised/: input_pipeline.py  predict.py  rte_op.ipynb  train.py
docker/: Dockerfile
docs/: README.md  README.tex.md
docs/docs/: README.md
generator/: gen.sh  generate_dataset.sh
generator/.devcontainer/: devcontainer.json
generator/2d/: param_test.m  test_sin.m
generator/2d-gmres/: param_train.m  test_dataset.m  train_dataset.m
generator/2d-sweeping/: P2generator.m  config.m  gen_inputs.m  gen_test_boundary.m  generator.m  qnwlege1.m  qnwlege2.m  run_main.m  sweeping_solver.m  test.m  test_random_kernel.m  train.m  train_1.m  train_2.m  train_delta.m
notebooks/: DeepRTE.ipynb  DeepRTE_eval.ipynb  DeepRTE_eval_repl.ipynb  DeepRTE_train.ipynb  config.yaml  config_test.ipynb  darray_test.ipynb  data.ipynb  data_npz.ipynb  data_plot.ipynb  data_postprocess.ipynb  data_split.ipynb  data_vis.ipynb  dataset.ipynb  dataset_convert.ipynb  dataset_test.ipynb  deeprte.ipynb  engine_test.ipynb  eval_test.ipynb  evaluate.ipynb  exp_test.ipynb  experiment_test.ipynb  inference.ipynb  initialization_test.ipynb  input_keys.ipynb  input_pipeline_test.ipynb  layer_stack_test.ipynb  mat_data.ipynb  mat_data_tset.ipynb  meff_attention.ipynb  merge_data.ipynb  mesh_downsampling.ipynb  metric_computing.ipynb  metrics.ipynb  metrics_compute.ipynb  model_test.ipynb  module_v2.ipynb  modules_test.ipynb  pipeline.ipynb  pipeline_test.ipynb  (+23 more)
notebooks/eff_rte/: eff_rte.py
notebooks/modulus/: branch.ipynb  deeponet.ipynb  mio.ipynb  test.ipynb
notebooks/test/: batch_test.ipynb  bc_input_test.ipynb  cfg.ipynb  compare.ipynb  deep_heun.ipynb  eval_itr.ipynb  eval_test.ipynb  eval_test_v.ipynb  input_pipeline_test.ipynb  mat_data.ipynb  meff_attention.ipynb  modules_test.ipynb  test.ipynb  tf_data_batch_test.ipynb  tfrecords_test.ipynb  train_test.ipynb  utils.py  vis.ipynb
scripts/: avg_metrics.py  build_tfds_dataset.sh  data_postprocess.sh  download_and_build_tfds.sh  download_dataset.sh  download_dataset_and_models.sh  gen_dataset.sh  generate_infer_ckpt.sh  generator_dataset.sh  remote_list.txt  run_deeprte.sh  run_eval.sh  run_train.sh  tfdsdata_postprocessing.sh
temp/: datapipeline.py  dataset.py
(+540 files in other folders)
