[build-system]
requires = ["uv_build>=0.6"]
build-backend = "uv_build"

[project]
name = "deeprte"
version = "1.0.0"
description = "Source code for solving radiative transfer equation using deep neural network"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ email = "mazhengcn@outlook.com" }, { name = "Zheng Ma" }]
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "clu>=0.0.12",
    "dill>=0.3.9",
    "huggingface-hub[cli,hf_xet]>=0.30.2",
    "jax-ai-stack[grain]>=2025.4.9",
    "matplotlib>=3.10.0",
    "rte-dataset",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.8",
]

[project.optional-dependencies]
cuda = ["jax-cuda12-plugin[with-cuda]>=0.6.0"]

[project.urls]
homepage = "https://github.com/mazhengcn/deeprte"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "penzai>=0.2.4",
    "pre-commit>=3.8.0",
    "ruff>=0.6.3",
    "ty>=0.0.1a4",
]

[tool.uv.sources]
jax-ai-stack = { git = "https://github.com/jax-ml/jax-ai-stack" }
rte-dataset = { git = "https://github.com/mazhengcn/rte-dataset" }

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
