[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deeprte-mio"
version = "0.1.0"
description = "A deep learning project for RTE"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.1.3",
    "dm-tree>=0.1.9",
    "ml-collections>=1.1.0",
    "nvidia-physicsnemo-sym",
    "nvidia-physicsnemo[dev]>=1.1.1",
    "torch>=2.5.1",
]

[project.scripts]
train = "deeponet.train:main"

[tool.setuptools.packages.find]
where = ["src", "."]

[tool.isort]
profile = "black"
