[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project]
name = "deeprte"
version = "1.0.1"
description = "Source code for solving radiative transfer equation using deep neural network"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ email = "mazhengcn@outlook.com" }, { name = "Zheng Ma" }]
license = { text = "Apache License, Version 2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "clu>=0.0.12",
    "dill>=0.3.9",
    "flax~=0.10.6",
    "grain>=0.2.9",
    "huggingface-hub>=0.30.2",
    "jax~=0.6.0",
    "matplotlib>=3.10.0",
    "optax>=0.2.4",
    "orbax-checkpoint>=0.11.13",
    "orbax-export>=0.0.6",
    "rte-dataset",
    "tensorflow-datasets>=4.9.8",
]

[project.optional-dependencies]
cuda = ["jax-cuda12-plugin[with-cuda]~=0.6.0"]

[project.urls]
homepage = "https://github.com/mazhengcn/deeprte"

[dependency-groups]
dev = ["jupyter>=1.1.1", "penzai>=0.2.4", "ruff>=0.6.3", "ty>=0.0.1a27"]

[tool.uv.sources]
rte-dataset = { git = "https://github.com/mazhengcn/rte-dataset" }
