[metadata]
name = deeprte
version = 0.0.1.dev
description = Source code for solving radiative transfer equation using deep neural network
long_description = file: README.md
author = Zheng Ma
author_email = mazhengcn@outlook.com
license = Apache License, Version 2.0
url = https://github.com/mazhengcn/deeprte
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.8
packages = find:
install_requires = 
    absl-py>=0.7.1
    ml-collections>=0.1
    typing_extensions>=3.7
    wrapt>=1.11.2
    numpy>=1.18.0
    jax
    dm-tree
    dm-haiku
    optax
    tensorflow-cpu>=2.7.0
    tensorflow_datasets
