[metadata]
name = deeprte
version = 0.0.1-alpha
description = Source code for solving radiative transfer equation using deep neural network
long_description = file: README.md
author = Zheng Ma
author_email = mazhengcn@outlook.com
license = Apache License, Version 2.0
url = https://github.com/mazhengcn/deeprte
classifiers =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
python_requires = >=3.8
packages = find:
install_requires = 
    absl-py>=1.0.0
    chex>=0.1.3
    dm-haiku>=0.0.6
    jax[cuda]>=0.3.15
    jaxline>=0.0.6
    ml-collections>=0.1.1
    numpy>=1.22.3
    optax>=0.1.2
    tensorflow-cpu>=2.9.0
    tensorflow_datasets>=4.5.2